[package]
name = "dab-adapter"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.collabora.com/collabora/dab-rdk-adapter"
description = "Enables compatibility of devices based on Reference Design Kit (RDK) with DAB (get-dab.com)"
version = "0.4.9"
edition = "2021"
repository = "https://gitlab.collabora.com/collabora/dab-rdk-adapter.git"
build = "build.rs"

[[bin]]
name = "dab-adapter"
path = "src/adapter.rs"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
paho-mqtt = { git = "https://github.com/denisyuji/paho.mqtt.rust.git", branch = "fix-v0.11.1-cmake1.49" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.20"
bytes = "1.3.0"
surf = "2.2.0"
futures = "0.3.5"
lazy_static = "1.4.0"
hyper = {version ="0.14", features = ["full"]}
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.9.0", features = ["attributes"] }
image = "0.24"
tiff = "0.9"
flate2 = "1.0"
local-ip-address = "0.5"
tts_rust = "0.3.5"
hound = "3.5.0"
built = { version = "0.6", features = ["chrono", "semver"] }
crossbeam = "0.8.1"
base64 = "0.21.0"


[build-dependencies]
built = { version = "0.6", features = ["git2", "chrono", "semver"] }
rustfmt = "0.10.0"