[package]
name = "dab-adapter"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/device-automation-bus/dab-adapter-rs/"
description = "Enables compatibility of devices based on Reference Design Kit (RDK) with DAB (get-dab.com)"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/device-automation-bus/dab-adapter-rs.git"
build = "build.rs"

[[bin]]
name = "dab-adapter"
path = "src/adapter.rs"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
paho-mqtt = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.20"
bytes = "1.3.0"
surf = "2.2.0"
futures = "0.3.5"
lazy_static = "1.4.0"
hyper = {version ="0.14", features = ["full"]}
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.9.0", features = ["attributes"] }
image = "0.24"
tiff = "0.9"
flate2 = "1.0"
local-ip-address = "0.5"
tts_rust = "0.3.5"
built = { version = "0.6", features = ["chrono", "semver"] }
crossbeam = "0.8.1"
base64 = "0.21.0"
notify = "6.0.1"
urlencoding = "2.0.0"
url = "2.2"
tokio-tungstenite = "0.15"
futures-util = "0.3"

[build-dependencies]
built = { version = "0.6", features = ["git2", "chrono", "semver"] }
rustfmt = "0.10.0"
